--- a/frontend/games.html
+++ b/frontend/games.html
@@ -81,7 +81,7 @@
     async function loadGames() {
       try {
         const [gamesData, teamsData] = await Promise.all([
-          api.getGames({ season: 2024, limit: 200 }),
+          api.getGames({ season: 2025, limit: 200 }),
           api.getTeams()
         ]);
 
@@ -109,23 +109,54 @@
       tbody.innerHTML = '';
 
       games.sort((a, b) => b.week - a.week || b.id - a.id).forEach(game => {
-        const winner = game.home_score > game.away_score ? teams[game.home_team_id] : teams[game.away_team_id];
-        const loser = game.home_score > game.away_score ? teams[game.away_team_id] : teams[game.home_team_id];
-        const winnerScore = Math.max(game.home_score, game.away_score);
-        const loserScore = Math.min(game.home_score, game.away_score);
-        const isHomeWin = game.home_score > game.away_score;
-        const location = game.is_neutral_site ? 'Neutral' : (isHomeWin ? 'Home' : 'Away');
-        const eloChange = Math.abs(isHomeWin ? game.home_rating_change : game.away_rating_change);
-
         const row = document.createElement('tr');
-        row.innerHTML = `
-          <td style="font-weight: 600;">Week ${game.week}</td>
-          <td><a href="team.html?id=${winner.id}" style="color: var(--primary-color); text-decoration: none; font-weight: 600;">${winner.name}</a></td>
-          <td style="font-weight: 700; color: var(--success-color);">${winnerScore}-${loserScore}</td>
-          <td><a href="team.html?id=${loser.id}" style="color: var(--text-secondary); text-decoration: none;">${loser.name}</a></td>
-          <td style="color: var(--text-secondary);">${location}</td>
-          <td style="color: var(--accent-color); font-weight: 600;">+${eloChange.toFixed(2)}</td>
-        `;
+
+        // Check if game has been played (scores exist)
+        const hasScore = game.home_score !== null && game.away_score !== null;
+
+        if (hasScore) {
+          // Completed game - display winner/loser
+          const winner = game.home_score > game.away_score ? teams[game.home_team_id] : teams[game.away_team_id];
+          const loser = game.home_score > game.away_score ? teams[game.away_team_id] : teams[game.home_team_id];
+
+          // Skip if teams not found
+          if (!winner || !loser) return;
+
+          const winnerScore = Math.max(game.home_score, game.away_score);
+          const loserScore = Math.min(game.home_score, game.away_score);
+          const isHomeWin = game.home_score > game.away_score;
+          const location = game.is_neutral_site ? 'Neutral' : (isHomeWin ? 'Home' : 'Away');
+          const eloChange = Math.abs(isHomeWin ? game.home_rating_change : game.away_rating_change);
+
+          row.innerHTML = `
+            <td style="font-weight: 600;">Week ${game.week}</td>
+            <td><a href="team.html?id=${winner.id}" style="color: var(--primary-color); text-decoration: none; font-weight: 600;">${winner.name}</a></td>
+            <td style="font-weight: 700; color: var(--success-color);">${winnerScore}-${loserScore}</td>
+            <td><a href="team.html?id=${loser.id}" style="color: var(--text-secondary); text-decoration: none;">${loser.name}</a></td>
+            <td style="color: var(--text-secondary);">${location}</td>
+            <td style="color: var(--accent-color); font-weight: 600;">+${eloChange.toFixed(2)}</td>
+          `;
+        } else {
+          // Future/scheduled game - display matchup
+          const homeTeam = teams[game.home_team_id];
+          const awayTeam = teams[game.away_team_id];
+
+          // Skip if teams not found
+          if (!homeTeam || !awayTeam) return;
+
+          const location = game.is_neutral_site ? 'Neutral Site' : homeTeam.name;
+
+          row.classList.add('game-scheduled');
+          row.innerHTML = `
+            <td style="font-weight: 600;">Week ${game.week}</td>
+            <td><a href="team.html?id=${awayTeam.id}" style="color: var(--text-secondary); text-decoration: none;">${awayTeam.name}</a></td>
+            <td style="font-style: italic; color: var(--text-secondary);">vs</td>
+            <td><a href="team.html?id=${homeTeam.id}" style="color: var(--text-secondary); text-decoration: none;">${homeTeam.name}</a></td>
+            <td style="color: var(--text-secondary); font-style: italic;">${location}</td>
+            <td style="color: var(--text-secondary); font-style: italic;">TBD</td>
+          `;
+        }
+
         tbody.appendChild(row);
       });
     }
