Update navigation links from 'vs AP Poll' to 'Prediction Comparison'
- Changed nav link text in all frontend pages for consistency
- Better describes the page content (ELO vs AP Poll comparison)
- Files updated: index.html, team.html, teams.html, games.html

--- a/frontend/games.html
+++ b/frontend/games.html
@@ -19,7 +19,7 @@
       <a href="index.html" class="nav-link">Rankings</a>
       <a href="teams.html" class="nav-link">All Teams</a>
       <a href="games.html" class="nav-link active">Games</a>
-      <a href="comparison.html" class="nav-link">vs AP Poll</a>
+      <a href="comparison.html" class="nav-link">Prediction Comparison</a>
     </div>
   </nav>
 
