--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       <a href="index.html" class="nav-link active">Rankings</a>
       <a href="teams.html" class="nav-link">All Teams</a>
       <a href="games.html" class="nav-link">Games</a>
-      <a href="comparison.html" class="nav-link">vs AP Poll</a>
+      <a href="comparison.html" class="nav-link">Prediction Comparison</a>
     </div>
   </nav>
 
