--- a/frontend/teams.html
+++ b/frontend/teams.html
@@ -19,7 +19,7 @@
       <a href="index.html" class="nav-link">Rankings</a>
       <a href="teams.html" class="nav-link active">All Teams</a>
       <a href="games.html" class="nav-link">Games</a>
-      <a href="comparison.html" class="nav-link">vs AP Poll</a>
+      <a href="comparison.html" class="nav-link">Prediction Comparison</a>
     </div>
   </nav>
 
