Make season year dynamic instead of hardcoded
- Changed 'Season 2024' to dynamic 'Season <span id="current-season">'
- Updated app.js to populate season from API stats
- Now displays correct active season from database

Fixes issue where season was hardcoded to 2024 instead of showing 2025

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
       <div class="stat-card">
         <div class="stat-label">Current Week</div>
         <div class="stat-value" id="current-week">--</div>
-        <div class="stat-subtext">Season 2024</div>
+        <div class="stat-subtext">Season <span id="current-season">--</span></div>
       </div>
       <div class="stat-card">
         <div class="stat-label">Total Teams</div>
